Make Popup that displays cart is full. Fix overflowing the cart limit.

--- a/styles/shared/amazon-header.css
+++ b/styles/shared/amazon-header.css
@@ -6,7 +6,7 @@
 
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 
   position: fixed;
   top: 0;
@@ -14,6 +14,38 @@
   right: 0;
   height: 60px;
 }
+
+
+/* BY MEEEEEEEE */
+
+
+.cart-is-full-banner {
+  opacity: 0;
+  display: none;
+  
+}
+
+.cart-is-full-text {
+  font-weight: 600;
+}
+
+.js-cart-is-full-visible {
+  opacity: 1;
+  display: flex;
+  position: fixed;
+  top: 68px;
+  width: 50%;
+  height: 35px;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(188, 37, 37);
+  border-radius: 4px;
+}
+
+
+/* BY MEEEEEEEEEEE */
+
+
 
 .amazon-header-left-section {
   width: 180px;
